init js and css

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html> 
 <html>
   <head>
-    <title>imsvr implements with node.js</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Enjoy Chatting</title>
+	<link rel="stylesheet" type="text/css" href="styles/index.css">
+	<script type="text/javascript" src="scripts/index.js"></script>
   </head>
   <body>
-    <h1>Hi imsvr</h1>
+    <h1>Hi guys</h1>
   </body>
 </html>
