init style of chat

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
 	<script type="text/javascript" src="scripts/index.js"></script>
   </head>
   <body>
-    <h1>Hi guys</h1>
+	<div class="chat-ui-header"></div>
+	<div class="chat-ui-content">
+		<div class="chat-ui-menu"></div>	
+		<div class="chat-ui-window"></div>	
+		<div class="chat-ui-friend"></div>	
+	</div>
+	<div class="chat-ui-footer"></div>
   </body>
 </html>
