--- a/public/index.html
+++ b/public/index.html
@@ -8,42 +8,6 @@
     <link rel="stylesheet" type="text/css" href="./lib/css/layout-default-latest.css" />
     <link rel="stylesheet" type="text/css" href="./lib/css/chat.css" />
     <link rel="stylesheet" type="text/css" href="./lib/css/themes/base/jquery.ui.all.css" />
-    <!-- CUSTOMIZE/OVERRIDE THE DEFAULT CSS -->
-    <style type="text/css">
-        /* remove padding and scrolling from elements that contain an Accordion OR a content-div */
-        .ui-layout-center,
-        /* has content-div */
-        .ui-layout-west,
-        /* has Accordion */
-        .ui-layout-east,
-        /* has content-div ... */
-        .ui-layout-east .ui-layout-content {
-            /* content-div has Accordion */
-            padding: 0;
-            overflow: hidden;
-        }
-        .ui-layout-center P.ui-layout-content {
-            line-height: 1.4em;
-            margin: 0;
-            /* remove top/bottom margins from <P> used as content-div */
-        }
-        h3,
-        h4 {
-            /* Headers & Footer in Center & East panes */
-            font-size: 1.1em;
-            background: #EEF;
-            border: 1px solid #BBB;
-            border-width: 0 0 1px;
-            padding: 7px 10px;
-            margin: 0;
-        }
-        .ui-layout-east h4 {
-            /* Footer in East-pane */
-            font-size: 0.9em;
-            font-weight: normal;
-            border-width: 1px 0 0;
-        }
-    </style>
     <!-- REQUIRED scripts for layout widget -->
     <script type="text/javascript" src="./lib/js/jquery-latest.js"></script>
     <script type="text/javascript" src="./lib/js/jquery-ui-latest.js"></script>
@@ -97,9 +61,10 @@
 <body>
     <div class="ui-layout-north ui-widget-content" style="display: none;">
         <div style="float: right; margin-right: 160px;">
-            <button onClick="resizeWidgets()">Resize</button>&nbsp;
+            <!--<button onClick="resizeWidgets()">Resize</button>&nbsp;
 
             <button onClick="removeUITheme(); myLayout.resizeAll()">Remove Theme</button>
+			-->
         </div>
 		Welcome to global biggest chatting room,enjoy chatting!
     </div>
@@ -118,19 +83,19 @@
     <div class="ui-layout-west" style="display: none;">
         <h3 class="ui-widget-header">Menu Pane</h3>
         <div id="accordion1" class="basic">
-            <h3><a href="#">Section 1</a></h3>
+            <h3><a href="#">China</a></h3>
             <div>
                 <h5>West Pane</h5>
                 <p>Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit amet, nunc.</p>
                 <p>Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.</p>
             </div>
-            <h3><a href="#">Section 2</a></h3>
+            <h3><a href="#">American</a></h3>
             <div>
                 <h5>Sed Non Urna</h5>
                 <p>Donec et ante. Phasellus eu ligula. Vestibulum sit amet purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor velit, faucibus interdum tellus libero ac justo.</p>
                 <p>Vivamus non quam. In suscipit faucibus urna.</p>
             </div>
-            <h3><a href="#">Section 3</a></h3>
+            <h3><a href="#">Canada</a></h3>
             <div>
                 <p>Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis. Phasellus pellentesque purus in massa. Aenean in pede.</p>
                 <p>Phasellus ac libero ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui.</p>
@@ -140,7 +105,7 @@
                     <li>List item three</li>
                 </ul>
             </div>
-            <h3><a href="#">Section 4</a></h3>
+            <h3><a href="#">England</a></h3>
             <div>
                 <p>Cras dictum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
                 <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aenean lacinia mauris vel est.</p>
