--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
     <!-- compressed: ./lib/js/jquery.layout.resizePaneAccordions-latest.min.js -->
     <script type="text/javascript" src="./lib/js/themeswitchertool.js"></script>
     <script type="text/javascript" src="./lib/js/debug.js"></script>
+	<style	type="text/css">
+		.message {
+			color	: green;
+		}
+	</style>
     <script type="text/javascript">
         $(document).ready(function() {
             myLayout = $('body').layout({
@@ -35,12 +40,25 @@
                 //active: 1
 				collapsible: true
             });
+			//add fake message
 			$(".chat-ui-sendmsg-btn").button().click(function(event){
 				//TODO message resolve and add client's pc time
 				//below is sample code
+				var title = $("<div class='message'></div>");
+				var userName = "Tracy";
+				var user = $("<span>" + userName + "</span>");
+				var mDate = $("<span>" + new Date() + "</span>");
+				title.append(user);
+				title.append(mDate);
+
+				var div = $("<div></div>");
+				var contentContainer = $("<div></div>");
 				var content = $(".chat-ui-content-input").val();
-				var origin = $(".chat-ui-content-rec").html();
-				$(".chat-ui-content-rec").html(origin + content + "\n");
+				contentContainer.text(content);
+				div.append(title);
+				div.append(contentContainer);
+				//var origin = $(".chat-ui-content-rec").html();
+				$(".chat-ui-content-rec").append(div);
 				$(".chat-ui-content-input").val("");
 			});
             // THEME SWITCHER
